review and fixes
